--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
         <label>请选择班级 (Class)</label>
         <select id="classSelect">
           <option value="" disabled selected>点击选择...</option>
-          <option value="1M">1M</option>
-          <option value="1K">1K</option>
-          <option value="1B">1B</option>
-          <option value="1H">1H</option>
-          <option value="1J">1J</option>
+          <option value="2M">2M</option>
+          <option value="2K">2K</option>
+          <option value="2B">2B</option>
+          <option value="2H">2H</option>
+          <option value="2J">2J</option>
+          <option value="2U">2U</option>
         </select>
       </div>
 
@@ -440,4 +441,5 @@
     };
   </script>
 </body>
+
 </html>
